@@ -3,6 +3,8 @@ Version 1.7.2
        the revision graph. (Stefan)
 - CHG: Issue #112: Unescaped urls in
        switch dialog. (Stefan)
+- BUG: Issue #115: non-existing folder
+       shown in repo browser. (Stefan)
 
 Version 1.7.1
 - BUG: Issue #88: Check for modifications on
